A little bit more tweaking on the execution HL code

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -144,6 +144,10 @@
     -fx-fill: -fx-theme-base2;
 }
 
+.code-token.executing-dim { 
+    -rtfx-background-color: -fx-theme-flow-code-executing-text-dim;    
+}
+
 .code-token.interesting {
 	-fx-fill: -fx-theme-flow-code-interesting-text;
 	-fx-cursor: hand;
