No more HL tweaking for today

--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -16,7 +16,7 @@
     
     -fx-theme-flow-code-text:                     #FFF;
 	-fx-theme-flow-code-executing-text:           #91ed91;
-	-fx-theme-flow-code-executing-text-dim:       #91ed91;
+	-fx-theme-flow-code-executing-text-dim:       #6db251;
 	-fx-theme-flow-code-interesting-text:         #de00c0;
 	
 	-fx-theme-defmethod-text:                     #de00c0;
