--- a/resources/theme_light.css
+++ b/resources/theme_light.css
@@ -15,8 +15,8 @@
 	-fx-theme-selected-main-tools-tab-text:       white;	
     
     -fx-theme-flow-code-text:                     #0b0d2e;
-	-fx-theme-flow-code-executing-text:           #40b840;
-    -fx-theme-flow-code-executing-text-dim:       #40b840;
+	-fx-theme-flow-code-executing-text:           #3dba69;
+    -fx-theme-flow-code-executing-text-dim:       #50d980;
 	-fx-theme-flow-code-interesting-text:         #de00c0;
 	
 	-fx-theme-defmethod-text:                     #9c0084;
