--- a/resources/styles.css
+++ b/resources/styles.css
@@ -301,3 +301,7 @@
 .timeline-tool .controls-box {
     -fx-padding : 10;
 }
+
+.contrast-background {
+    -fx-background-color: -fx-theme-base2;
+}
