--- a/resources/theme_light.css
+++ b/resources/theme_light.css
@@ -26,7 +26,7 @@
 	-fx-theme-links:                              #9c0084;
 	-fx-theme-breadcrums:                         #9c0084;
 	-fx-theme-ok:                                 #00ff00;
-	-fx-theme-fail:                               #ff0000;
+	-fx-theme-attention:                          #ff0000;
     -fx-theme-warning:                            orange;
 	-fx-theme-title-label:                        #336699;
 	-fx-theme-field-label:                        #9c0084;
