--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -33,6 +33,7 @@
 	-fx-theme-breakpoint:                         #ff0000;
 	-fx-theme-breakpoint-continue:                #60d61b;
     -fx-theme-form-highlight:                     #636363;
+    -fx-theme-list-selection:                     #788da1;
 }
 
 .root {
