--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -2,6 +2,7 @@
 	-fx-theme-base1:                              #323232;	
 	-fx-theme-base2:                              #3f474f; 
 	-fx-theme-base3:                              #2f353b;
+	-fx-theme-base4:                              #717175;
 
 	-fx-theme-separator:                          orange;
 	-fx-theme-dim-text:                           #919191;
