--- a/resources/theme_light.css
+++ b/resources/theme_light.css
@@ -2,7 +2,8 @@
 	-fx-theme-base1:                              #ddd;	
 	-fx-theme-base2:                              #eee;
 	-fx-theme-base3:                              #ebecff;
-
+	-fx-theme-base4:                              #ebecff;
+    
 	-fx-theme-separator:                          #919191;
 	-fx-theme-dim-text:                           #919191;
     -fx-theme-button1-background:                 #336699;
