--- a/resources/font-size-lg.css
+++ b/resources/font-size-lg.css
@@ -2,3 +2,6 @@
 .ikonli-font-icon {-fx-font-size: 21;}
 .btn-sm {-fx-font-size: 16;}
 .btn-xs {-fx-font-size: 13;}
+
+.threads-tab-pane > .tab-header-area {-fx-padding: 5 0 0 131;}
+.flows-tab-pane > .tab-header-area {-fx-padding: 5 0 0 194;}
