--- a/resources/font-size-xl.css
+++ b/resources/font-size-xl.css
@@ -2,3 +2,6 @@
 .ikonli-font-icon {-fx-font-size: 23;}
 .btn-sm {-fx-font-size: 19;}
 .btn-xs {-fx-font-size: 16;}
+
+.threads-tab-pane > .tab-header-area {-fx-padding: 5 0 0 150;}
+.flows-tab-pane > .tab-header-area {-fx-padding: 5 0 0 222;}
