--- a/resources/font-size-lg.css
+++ b/resources/font-size-lg.css
@@ -5,3 +5,5 @@
 
 .threads-tab-pane > .tab-header-area {-fx-padding: 5 0 0 131;}
 .flows-tab-pane > .tab-header-area {-fx-padding: 5 0 0 194;}
+
+.flows-combo {-fx-pref-width: 184;}
