--- a/resources/font-size-md.css
+++ b/resources/font-size-md.css
@@ -6,4 +6,4 @@
 .threads-tab-pane > .tab-header-area {-fx-padding: 5 0 0 111;}
 .flows-tab-pane > .tab-header-area {-fx-padding: 5 0 0 164 ;}
 
-.flows-combo {-fx-pref-width: 155;}
+.flows-combo {-fx-pref-width: 155; -fx-font-size: 15;}
