--- a/resources/font-size-sm.css
+++ b/resources/font-size-sm.css
@@ -6,4 +6,4 @@
 .threads-tab-pane > .tab-header-area {-fx-padding: 5 0 0 92 ;}
 .flows-tab-pane > .tab-header-area {-fx-padding: 5 0 0 135 ;}
 
-.flows-combo {-fx-pref-width: 127;}
+.flows-combo {-fx-pref-width: 127; -fx-font-size: 13;}
