--- a/resources/flowstorm/styles/styles.css
+++ b/resources/flowstorm/styles/styles.css
@@ -1,10 +1,10 @@
 
 @font-face {
-    src: url('fonts/Roboto-Light.ttf');
+    src: url('../fonts/Roboto-Light.ttf');
 }
 
 @font-face {
-    src: url('fonts/Roboto-Medium.ttf');
+    src: url('../fonts/Roboto-Medium.ttf');
 }
 
 .main-pane {
