--- a/resources/flowstorm/styles/styles.css
+++ b/resources/flowstorm/styles/styles.css
@@ -360,3 +360,15 @@
 .contrast-background {
     -fx-background-color: -fx-theme-base2;
 }
+
+/****************/
+/* Diffing tool */
+/****************/
+
+.diff-delete {
+    -fx-background-color: -fx-theme-diff-delete;
+}
+
+.diff-add {
+    -fx-background-color: -fx-theme-diff-add;
+}
