--- a/resources/flowstorm/styles/theme_light.css
+++ b/resources/flowstorm/styles/theme_light.css
@@ -37,6 +37,8 @@
     -fx-theme-list-selection:                     #afbbc4;
     -fx-theme-hl-combos:                          #b9b8d4;
     -fx-theme-important-combos:                   #c9a9c4;
+    -fx-theme-diff-delete:                        #ff6666;
+    -fx-theme-diff-add:                           #6cc46f;
 }
 
 .root {
