Implement outputs tool

--- a/resources/flowstorm/styles/styles.css
+++ b/resources/flowstorm/styles/styles.css
@@ -347,3 +347,12 @@
 .data-window .breadcrums .button {
     -fx-background-color: -fx-theme-breadcrums;
 }
+
+
+/***********/
+/* Outputs */
+/***********/
+
+.outputs-dw {
+    -fx-background-color: -fx-theme-base2;
+}
