--- a/resources/flowstorm/styles/theme_light.css
+++ b/resources/flowstorm/styles/theme_light.css
@@ -27,6 +27,7 @@
 	-fx-theme-links:                              #9c0084;
 	-fx-theme-breadcrums:                         #9c0084;
 	-fx-theme-ok:                                 #00ff00;
+    -fx-theme-on:                                 #00d97e;
 	-fx-theme-attention:                          #ff0000;
     -fx-theme-warning:                            orange;
 	-fx-theme-title-label:                        #336699;
