--- a/resources/flowstorm/styles/styles.css
+++ b/resources/flowstorm/styles/styles.css
@@ -36,10 +36,12 @@
 
 .list-view .list-cell:selected {
     -fx-background-color: -fx-theme-list-selection;
+    -fx-text-fill: -fx-theme-flow-code-text;
 }
 
 .table-view .table-row-cell:selected {
     -fx-background-color: -fx-theme-list-selection;
+    -fx-text-fill: -fx-theme-flow-code-text;
 }
 
 .combo-box .label {
@@ -236,6 +238,14 @@
   -fx-padding: 5 0 0 135 ;
 }
 
+.fn-call-list-cell {
+    -fx-background-color: -fx-theme-base2;    
+}
+
+.fn-call-list-cell .label{
+    -fx-text-fill: -fx-theme-flow-code-text;
+}
+
 /*****************/
 /* Browser stuff */
 /*****************/
@@ -339,10 +349,6 @@
 
 .timeline-tool .controls-box {
     -fx-padding : 10;
-}
-
-.contrast-background {
-    -fx-background-color: -fx-theme-base2;
 }
 
 /****************/
