Fix Browser's function 'Break' button styling
Fixes #203

--- a/resources/flowstorm/styles/styles.css
+++ b/resources/flowstorm/styles/styles.css
@@ -271,11 +271,17 @@
 
 .button.browser-break-btn {    
 	visibility: hidden;
-    -fx-background-color: -fx-theme-breakpoint;
+    -fx-background-color: -fx-theme-breakpoint;    
+}
+
+.button.browser-break-btn:hover {    
+	visibility: hidden;
+    -fx-background-color: -fx-theme-button-hover;
+    -fx-color: -fx-hover-base;
 }
 
 .button.browser-break-btn.enable {
-	visibility: visible;
+	visibility: visible;    
 }
 
 .button.browser-instrument-btn.enable {
